--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>TecBoyLabs</title>
+    <title>TecboyLabs</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/tecboy-labs-logo.png" width="180" height="32" alt=""/></a>
+                <a class="navbar-brand" href="index.html"><img src="images/tecboy-labs-logo-white-black-out.png" width="180" height="32" alt=""/></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,28 +51,26 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
-                    </li>
-                    <li>
                         <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Services <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="portfolio-1-col.html">Laser Engraving</a>
+                                <a href="laser-engraving.html">Laser Engraving</a>
                             </li>
                             <li>
-                                <a href="portfolio-2-col.html">3D Printing</a>
+                                <a href="3d-printing.html">3D Printing</a>
                             </li>
                             <li>
-                                <a href="portfolio-3-col.html">Woodworking</a>
+                                <a href="woodworking.html">Woodworking</a>
                             </li>
                             <li>
-                                <a href="portfolio-4-col.html">Electronics</a>
+                                <a href="electronics.html">Electronics</a>
                             </li>
                         </ul>
                     </li>
+                    <!-- nav bar for blog and other pages
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -106,7 +104,7 @@
                                 <a href="pricing.html">Pricing Table</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -289,7 +287,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; TecBoyLabs 2018</p>
+                    <p>Copyright &copy; TecboyLabs 2018</p>
                 </div>
             </div>
         </footer>
