--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -71,6 +71,9 @@
                             </li>
                         </ul>
                     </li>
+					<li>
+                        <a href="faq.html">FAQ</a>
+                    </li>
 					<!-- nav bar for blog and other pages
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
