--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
         </div>
 
         <hr>
+		
+		<!-- favicon -->
+		<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
         <!-- Footer -->
         <footer>
