--- a/3d-printing.html
+++ b/3d-printing.html
@@ -233,6 +233,9 @@
         <!-- /.row -->
 
         <hr>
+		
+		<!-- favicon -->
+		<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
         <!-- Footer -->
         <footer>
