--- a/contact.html
+++ b/contact.html
@@ -70,6 +70,9 @@
                             </li>
                         </ul>
                     </li>
+					<li>
+                        <a href="faq.html">FAQ</a>
+                    </li>
                     <!-- nav bar for blog and other pages
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
@@ -207,6 +210,9 @@
         <!-- /.row -->
 
         <hr>
+		
+		<!-- favicon -->
+		<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
         <!-- Footer -->
         <footer>
