--- a/electronics.html
+++ b/electronics.html
@@ -239,12 +239,15 @@
         <!-- /.row -->
 
         <hr>
+		
+		<!-- favicon -->
+		<link rel="icon" type="image/x-icon" class="js-site-favicon" href="images/favicon.jpg">
 
         <!-- Footer -->
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; TecboyLabs 2018</p>
                 </div>
             </div>
         </footer>
