--- a/3d-printing.html
+++ b/3d-printing.html
@@ -101,18 +101,26 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                            <img class="img-responsive" src="images/shovel-handle.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                            <img class="img-responsive" src="images/20150801_1317412.jpg" alt="">
                         </div>
                         <div class="item">
-                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                            <img class="img-responsive" src="images/img_0127.jpg" alt="">
+                        </div>
+						<div class="item">
+                            <img class="img-responsive" src="images/img_0130.jpg" alt="">
+                        </div>
+						<div class="item">
+                            <img class="img-responsive" src="images/big_panel.jpg" alt="">
                         </div>
                     </div>
 
@@ -128,8 +136,15 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <p>We're sure that by now you have heard of "3D Printing", if you haven't, it basically describes a process of depositing layers of plastic to create an object, such as this shovel handle as seen on home</p>
+				<p>Yes, you really can 3d print a chain! Of any size and with many links. This red one has 5 links, each of which are about 3/4 of an inch wide.</p>
+				<p>Even jewelery can be created such as this stretchy bracelet with a textured pattern across its outside edge.</p>
+				<p>Here is another example of a custom item that has a practical use, a yellow business card holder shaped like a laptop and the "screen" is where the cards go!</p>
+				<p>Here is an example of a large printed item. This white panel is almost 18 inches tall and at its widest, it's almost 7 inches. And yes, it tapers towards the top to about 5 inches and it is also curved! For a sense of scale, the calipers seen in the photo can open to a max of 6 inches!</p>
+				<p>As you can see, there are virtually no limits to what can be created by 3d printing and the future will see explosive growth and even more potential.</p>
+				<p>Hopefully these examples have inspired your wanting to experience 3d printing, if so contact us so we can get you started and have a design of your choosing to show family and friends.</p>
+                <p>Color choices include all of the standards colors of the rainbow (red, orange, yellow, green, blue, purple) in addition to black, white, gray, and even semi-clear. If your design requires a color not listed, please ask us as we can probably print it. (such as glow-in-the-dark!)</p>
+				<h3>Project Details</h3>
                 <ul>
                     <li>Lorem Ipsum</li>
                     <li>Dolor Sit Amet</li>
