--- a/woodworking.html
+++ b/woodworking.html
@@ -101,6 +101,8 @@
                         <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+						<li data-target="#carousel-example-generic" data-slide-to="4"></li>
                     </ol>
 
                     <!-- Wrapper for slides -->
@@ -112,6 +114,12 @@
                             <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                         </div>
                         <div class="item">
+                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                        </div>
+						<div class="item">
+                            <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                        </div>
+						<div class="item">
                             <img class="img-responsive" src="http://placehold.it/750x500" alt="">
                         </div>
                     </div>
