--- a/electronics.html
+++ b/electronics.html
@@ -171,8 +171,9 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <p>If you have a need for custom electronics, as simple as a small circuit for a single purpose, or maybe you need a off-the-shelf micro-computer to run your next project such as a Raspberry Pi or an Arduino, we have you covered. Just inform us as to what your requirements are and we can do the rest.</p>
+                <p>Speaking of Raspberry Pi, these gallery photos are of a prototype classic video game emulator running on a Raspberry Pi 2 with a 7 inch touchscreen display. These small micro-computer boards have opened up many possibilities that were unheard of not too long ago.</p>
+				<h3>Project Details</h3>
                 <ul>
                     <li>Lorem Ipsum</li>
                     <li>Dolor Sit Amet</li>
