--- a/woodworking.html
+++ b/woodworking.html
@@ -179,7 +179,13 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+                <p>Here at Tecboy Labs, we got our start in woodworking and have since expanded into all sorts of cutting edge technology.</p>
+				<p>If you need a piece constructed and don't know where to start we can help you. Whether it is a custom computer desk with built in electrical outlets, or a cabinet with built in charging ports for your personal electronic devices, we can help you to create it so you can enjoy it.</p>
+				<p>These unfinished components will be the pedestals for a custom built computer desk. The sides are oak plywood and the front pieces are solid oak!</p>
+				<p>These pieces of wood form the basis of a drawer. The darker top one is solid oak and the bottom ones are maple veneered plywood.</p>
+				<p>The edge on this piece of wood shows one of many joinery methods to connect different pieces of wood together. The mating piece also has a similar slot and a third piece gets glued into the slot and becomes hidden when done. In case you were wondering, its color is a really dark brown stain.</p>
+				<p>These pieces of wood form the basis of a drawer. The darker top one is solid oak and the bottom ones are maple veneered plywood.</p>
+				<p>Here is an example of wood and metal working together to form a panel for a computer that allows for airflow to be directed by a fan. Notice the non pattern following holes in the black metal part, those are mounting holes for the fan.</p>
                 <h3>Project Details</h3>
                 <ul>
                     <li>Lorem Ipsum</li>
