--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Serving WNY since 2014!
+                    Serving WNY since 2014!<small>  info@tecboylabs.com | (716) 435-5062</small>
                 </h1>
             </div>
             <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i>some random text </h4>
+                        <h4><i class="fa fa-fw fa-check"></i>Custom Turnkey Solutions</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>We deliver custom solutions that work right out the gate.</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -189,7 +189,7 @@
                         <h4><i class="fa fa-fw fa-gift"></i> Free Consultations</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>Have an idea and want to bring it to life? Get in touch and we can make that brilliant idea a reality.</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                         <h4><i class="fa fa-fw fa-compass"></i> Best Customer service</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
+                        <p>At TecboyLabs the customers are the most important part of the process, their ideas are what fuel all of our creations.</p>
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
