--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
         <hr>
 
-        <!-- Call to Action Section -->
+        <!-- Call to Action Section 
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
@@ -282,7 +282,7 @@
                     <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
                 </div>
             </div>
-        </div>
+        </div>  -->
 
         <hr>
 		
