--- a/electronics.html
+++ b/electronics.html
@@ -137,7 +137,7 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-8">
+            <div class="col-md-8 col-lg-5">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -155,7 +155,7 @@
                         <div class="item">
                             <img class="img-responsive" src="images/pi2.jpg" alt="">
                         </div>
-                        <div class="item">
+                        <div class="item col-md-1">
                             <img class="img-responsive" src="images/pi3.jpg" alt="">
                         </div>
 						<div class="item">
@@ -173,7 +173,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-lg-7">
                 <h3>Project Description</h3>
                 <p>If you have a need for custom electronics, as simple as a small circuit for a single purpose, or maybe you need a off-the-shelf micro-computer to run your next project such as a Raspberry Pi or an Arduino, we have you covered. Just inform us as to what your requirements are and we can do the rest.</p>
                 <p>Speaking of Raspberry Pi, these gallery photos are of a prototype classic video game emulator running on a Raspberry Pi 2 with a 7 inch touchscreen display. These small micro-computer boards have opened up many possibilities that were unheard of not too long ago.</p>
