--- a/laser-engraving.html
+++ b/laser-engraving.html
@@ -171,16 +171,26 @@
 
             <div class="col-md-4">
                 <h3>Project Description</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-                <h3>Project Details</h3>
+                <p>Permanent precise laser marking is a service we provide to the commercial and industrial manufacturers. Part Numbering and Product Branding are essential for promoting your business and customer retention. Laser engraving can be the most economical and professional way to mark your parts. Laser engraving creates a precise and permanent marking on a number of materials. Marking on precious metals, PVC, and vinyl is NOT provided.</p>
+				
+				<p>Tecboy Labs provides part marking services big and small and would be delighted to discuss your part number and branding needs - give us a call at 716-435-5062 or email info@tecboylabs.com. If your brand is not on your product - your missing a resale opportunity. By engraving your company name, web site or part number you're helping to brand your company and products while growing your name recognition. Laser Engraving is a permanent marking method. On bare metals a solution is applied on the metal to interact with the laser and leave a permanent black marking on the metal. When artwork from your company logos and designs is incorporated into the marking the results are impressive. Anodized Aluminum, for example, responds well and requires no marking solutions.</p>
+				<p></p>
+				<p></p>
+                <h3>LASERABLE MATERIAL</h3>
                 <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
+                    <li>Stainless Steel (marking only)</li>
+                    <li>Anodized Aluminum (marking only)</li>
+                    <li>Glass (marking only)</li>
+                    <li>Absolute Black Granite (marking only)</li>
+					<li>Marble (marking only)</li>
+					<li>Wood</li>
+					<li>Acrylic</li>
+					<li>Fabric</li>
+					<li>Ceramic</li>
+					<li>Denim</li>
+					<li>Cloth</li>
                 </ul>
-            </div>
-
+            </div>			
         </div>
         <!-- /.row -->
 
