--- a/3d-printing.html
+++ b/3d-printing.html
@@ -137,7 +137,7 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-8">
+            <div class="col-md-8 col-lg-5">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -177,7 +177,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-lg-7">
                 <h3>Project Description</h3>
                 <p>We're sure that by now you have heard of "3D Printing", if you haven't, it basically describes a process of depositing layers of plastic to create an object, such as this shovel handle as seen on home</p>
 				<p>Yes, you really can 3d print a chain! Of any size and with many links. This red one has 5 links, each of which are about 3/4 of an inch wide.</p>
