--- a/electronics.html
+++ b/electronics.html
@@ -155,7 +155,7 @@
                         <div class="item">
                             <img class="img-responsive" src="images/pi2.jpg" alt="">
                         </div>
-                        <div class="item col-md-1">
+                        <div class="item">
                             <img class="img-responsive" src="images/pi3.jpg" alt="">
                         </div>
 						<div class="item">
