--- a/woodworking.html
+++ b/woodworking.html
@@ -137,7 +137,7 @@
         <!-- Portfolio Item Row -->
         <div class="row">
 
-            <div class="col-md-8">
+            <div class="col-md-8 col-lg-6">
                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
                     <ol class="carousel-indicators">
@@ -174,7 +174,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-lg-6">
                 <h3>Project Description</h3>
                 <p>Here at Tecboy Labs, we got our start in woodworking and have since expanded into all sorts of cutting edge technology.</p>
 				<p>If you need a piece constructed and don't know where to start we can help you. Whether it is a custom computer desk with built in electrical outlets, or a cabinet with built in charging ports for your personal electronic devices, we can help you to create it so you can enjoy it.</p>
