--- a/faq.html
+++ b/faq.html
@@ -6,8 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="TecboyLabs is a custom fabrication shop located in Buffalo NY">
     <meta name="author" content="">
+	<meta name="Keywords" content="3d printing, laser engraving, woodworking, electronics, raspberry pi, arduino, laser, buffalo, custom, fabrication, custom fabrication">
 
     <title>TecboyLabs</title>
 
